infra/auth-mongo-sts.yaml
# mongodb statefulset and service
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-auth
spec:
  serviceName: mongo-auth
  replicas: 1
  selector:
    matchLabels:
      app: mongo-auth
  template:
    metadata:
      labels:
        app: mongo-auth
    spec:
      containers:
        - name: mongo-auth
          image: mongo:6.0.3
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-auth-persistent-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-auth-persistent-storage
      spec:
        storageClassName: cdk-cinder
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-auth-svc
spec:
  selector:
    app: mongo-auth
  ports:
    - port: 27017
      targetPort: 27017
