infra/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: fserra
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: fedeztk/tripapp-ui:feat-infra-infra-template
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: fserra
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
#  type: LoadBalancer
