infra/group-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group
  template:
    metadata:
      labels:
        app: group
    spec:
      containers:
        - name: group
          image: fedeztk/tripapp-group:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: group-svc
spec:
  selector:
    app: group
  ports:
    - port: 80
      targetPort: 8080
