infra/wallet-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet
  template:
    metadata:
      labels:
        app: wallet
    spec:
      containers:
        - name: wallet
          image: fedeztk/tripapp-wallet:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: wallet-svc
spec:
  selector:
    app: wallet
  ports:
    - port: 80
      targetPort: 8080
